--- a/index.html
+++ b/index.html
@@ -20,47 +20,51 @@
         <div class="bg-gray-800 rounded-lg p-6 space-y-4">
           <div>
             <label class="block text-sm font-medium mb-2">Your Peer ID</label>
-            <div class="flex items-center gap-2">
-              <input
-                type="text"
-                id="your-peer-id-display"
-                readonly
-                class="flex-1 px-4 py-2 bg-gray-700 border border-gray-600 rounded-lg font-mono text-sm"
-              />
-              <button
-                id="copy-peer-id-btn"
-                class="p-2 hover:bg-gray-700 rounded transition-colors"
-                title="Copy Peer ID"
-              >
-                <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 16H6a2 2 0 01-2-2V6a2 2 0 012-2h8a2 2 0 012 2v2m-6 12h8a2 2 0 002-2v-8a2 2 0 00-2-2h-8a2 2 0 00-2 2v8a2 2 0 002 2z"></path>
-                </svg>
-              </button>
-              <button
-                id="regenerate-peer-id-btn"
-                class="p-2 hover:bg-gray-700 rounded transition-colors"
-                title="Regenerate Peer ID"
-              >
-                <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 4v5h.582m15.356 2A8.001 8.001 0 004.582 9m0 0H9m11 11v-5h-.581m0 0a8.003 8.003 0 01-15.357-2m15.357 2H15"></path>
-                </svg>
-              </button>
+            <div class="space-y-2">
+              <div class="flex items-start gap-2">
+                <textarea
+                  id="your-peer-id-display"
+                  readonly
+                  rows="2"
+                  class="flex-1 px-4 py-2 bg-gray-700 border border-gray-600 rounded-lg font-mono text-sm resize-none"
+                ></textarea>
+                <div class="flex flex-col gap-2">
+                  <button
+                    id="copy-peer-id-btn"
+                    class="p-2 hover:bg-gray-700 rounded transition-colors"
+                    title="Copy Peer ID"
+                  >
+                    <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 16H6a2 2 0 01-2-2V6a2 2 0 012-2h8a2 2 0 012 2v2m-6 12h8a2 2 0 002-2v-8a2 2 0 00-2-2h-8a2 2 0 00-2 2v8a2 2 0 002 2z"></path>
+                    </svg>
+                  </button>
+                  <button
+                    id="regenerate-peer-id-btn"
+                    class="p-2 hover:bg-gray-700 rounded transition-colors"
+                    title="Regenerate Peer ID"
+                  >
+                    <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 4v5h.582m15.356 2A8.001 8.001 0 004.582 9m0 0H9m11 11v-5h-.581m0 0a8.003 8.003 0 01-15.357-2m15.357 2H15"></path>
+                    </svg>
+                  </button>
+                </div>
+              </div>
             </div>
             <p class="text-xs text-gray-400 mt-1">Share this Peer ID with other devices</p>
           </div>
           
           <div class="border-t border-gray-700 pt-4">
             <label class="block text-sm font-medium mb-2">Connect to Peer ID</label>
-            <div class="flex gap-2">
-              <input
-                type="text"
+            <div class="space-y-2">
+              <textarea
                 id="peer-id-input"
                 placeholder="Enter peer ID to connect"
-                class="flex-1 px-4 py-2 bg-gray-700 border border-gray-600 rounded-lg focus:outline-none focus:ring-2 focus:ring-primary-500 font-mono text-sm"
-              />
+                rows="2"
+                class="w-full px-4 py-2 bg-gray-700 border border-gray-600 rounded-lg focus:outline-none focus:ring-2 focus:ring-primary-500 font-mono text-sm resize-none"
+              ></textarea>
               <button
                 id="connect-peer-btn"
-                class="px-6 py-2 bg-primary-600 hover:bg-primary-700 rounded-lg font-medium transition-colors disabled:opacity-50 disabled:cursor-not-allowed"
+                class="w-full px-6 py-2 bg-primary-600 hover:bg-primary-700 rounded-lg font-medium transition-colors disabled:opacity-50 disabled:cursor-not-allowed"
               >
                 Connect
               </button>
