Add recent peers list to homepage
- Display list of recently connected peers on homepage
- Store up to 10 recent peers in localStorage
- Click on peer to auto-fill input and connect
- Peers are automatically added when connection succeeds
- Shows 'No recent peers' when list is empty
- Scrollable list with hover effects

--- a/index.html
+++ b/index.html
@@ -72,6 +72,13 @@
             <p class="text-xs text-gray-400 mt-1">Enter another device's Peer ID to pair</p>
           </div>
           
+          <div class="border-t border-gray-700 pt-4">
+            <label class="block text-sm font-medium mb-2">Recent Peers</label>
+            <div id="recent-peers-list" class="space-y-2 max-h-48 overflow-y-auto">
+              <p class="text-xs text-gray-400 text-center py-2">No recent peers</p>
+            </div>
+          </div>
+          
           <div id="connection-status" class="hidden">
             <div class="flex items-center gap-2 text-sm">
               <span class="w-2 h-2 rounded-full bg-gray-500 animate-pulse" id="status-indicator"></span>
