Add connection test button and improve debugging
- Add 'Test Connection' button to help diagnose connection issues
- Shows peer IDs, hashed values, and connection state
- Better error messages with troubleshooting steps
- Improved console logging with emojis for easier debugging
- Public method to test keyphrase hashing

--- a/index.html
+++ b/index.html
@@ -69,6 +69,13 @@
               >
                 Connect
               </button>
+              <button
+                id="test-connection-btn"
+                class="w-full px-4 py-2 bg-gray-600 hover:bg-gray-700 rounded-lg font-medium transition-colors text-sm"
+                title="Test connection and show debug info"
+              >
+                🔍 Test Connection
+              </button>
             </div>
             <p class="text-xs text-gray-400 mt-1">Enter another device's Peer ID to pair</p>
           </div>
