--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
     <!-- Homepage Screen (Auto-creates room) -->
     <div id="homepage-screen" class="flex-1 flex items-center justify-center p-4">
-      <div class="w-full max-w-md space-y-6 relative z-10">
+      <div class="w-full max-w-md space-y-6 relative z-10 bg-gray-900 bg-opacity-95 rounded-lg p-6">
         <div class="text-center">
           <h1 class="text-4xl font-bold mb-2">P2P Lightsaber Game</h1>
           <p class="text-gray-400">Swing your phone to control the lightsaber</p>
